--- a/Payment/Pending Payment Detailed.html
+++ b/Payment/Pending Payment Detailed.html
@@ -410,14 +410,14 @@
                 <div class="navbar-brand text-white">Sample House Resident Portal </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon">
-                        <img class="userIcon_img" src="../assets/user_icon.svg" style="">
+                        <img class="userIcon_img" src="../assets/user_icon.svg">
                     </span>
                 </button>
                 <div class="collapse navbar-collapse " id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto navbar-right-top">
                         <li class="nav-item dropdown nav-user">
                             <a class="nav-link nav-user-img" href="../Payment/Outstanding Bill.html" id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>
-                                    <img class="userIcon_img" src="../assets/user_icon.svg" style=""></span>
+                                    <img class="userIcon_img" src="../assets/user_icon.svg"></span>
                             </a>
                             <div class="dropdown-menu dropdown-menu-right nav-user-dropdown" aria-labelledby="navbarDropdownMenuLink2">
                                 <div class="nav-user-info">
@@ -449,7 +449,7 @@
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="true" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="navbar-collapse collapse show" id="navbarNav" style="">
+                    <div class="navbar-collapse collapse show" id="navbarNav">
                         <ul class="navbar-nav flex-column">
                             <div class="form-group mb-0">
                                 <select class="form-control" name="cbProperty" onchange="refreshProperty(this)">
@@ -463,10 +463,10 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../Dashboard/Dashboard.html" data-toggle="collapse" aria-expanded="true" data-target="#propertypayment" aria-controls="propertypayment">
+                                <a class="nav-link active" href="../Dashboard/Dashboard.html" data-toggle="collapse" aria-expanded="true" data-target="#propertypayment" aria-controls="propertypayment">
                                     <img class="menu_icons" src="../assets/credit_card_icon.svg">Payment<span class="badge badge-success">6</span></a>
                                 </a>
-                                <div id="propertypayment" class="submenu open" style="">
+                                <div id="propertypayment" class="submenu open">
                                     <ul class="nav flex-column">
                                         <li class="nav-item">
                                             <a class="nav-link " href="../Payment/Outstanding Bill.html">
@@ -478,7 +478,8 @@
                                             <a class="nav-link active" href="../Payment/Pending Payment.html">
                                                 <img class="menu_icons" src="../assets/credit_score_tick.svg">
                                                 <div>Pending Payment</div>
-                                                <span class="badge badge-success">6</span></a>
+                                                <span class="badge badge-success">6</span>
+                                            </a>
                                             </a>
                                         </li>
                                     </ul>
@@ -505,11 +506,11 @@
         </div>
 
         <div class="dashboard-wrapper">
-            <img class="back-house-image" style="" src="../assets/house_back_img.svg">
+            <img class="back-house-image" src="../assets/house_back_img.svg">
             <main class="py-4">
                 <div class="container-fluid">
-                    <div class="row head_wrap" style="">
-                        <div class="uni_heading" style="">
+                    <div class="row head_wrap">
+                        <div class="uni_heading">
                             <a class="btn-back" href="../Payment/Pending Payment.html">
                                 <div class="icon-wrapper">
                                     <img class="row_icons" src="../assets/arrow_back_icon.svg">
@@ -581,7 +582,7 @@
                                     </tr>
                                 </tbody>
                             </table>
-                            <div class="total_rm" style="">
+                            <div class="total_rm">
                                 <h6>Total (RM)</h6>
                                 <h6>4,576.70</h6>
                             </div>
@@ -628,9 +629,9 @@
                         </form>
                     </div>
                     <div class="payment_pay_buttons">
-                        <button type="submit" class="page-Button">
-                            <div class="page-button-text pay-margin">Pay</div>
-                            <img class="page-button-Icon" src="../assets/tick_icon.svg">
+                        <button type="submit" class="page-Button after_card_buttons">
+                            <div class="page-button-text">Pay</div>
+                            <img class="page-button-icon" src="../assets/tick_icon.svg">
                         </button>
                         <a href="../Payment/Upload Pay Slip.html" type="submit" class="upload_slip_btn">
                             <div class="upload_slip_text">Upload Payment Slip</div>
