--- a/Payment/Pending Payment.html
+++ b/Payment/Pending Payment.html
@@ -170,14 +170,14 @@
                 <div class="navbar-brand text-white">Sample House Resident Portal </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon">
-                        <img class="userIcon_img" src="../assets/user_icon.svg" style="">
+                        <img class="userIcon_img" src="../assets/user_icon.svg">
                     </span>
                 </button>
                 <div class="collapse navbar-collapse " id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto navbar-right-top">
                         <li class="nav-item dropdown nav-user">
                             <a class="nav-link nav-user-img" href="../Payment/Outstanding Bill.html" id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>
-                                    <img class="userIcon_img" src="../assets/user_icon.svg" style=""></span>
+                                    <img class="userIcon_img" src="../assets/user_icon.svg"></span>
                             </a>
                             <div class="dropdown-menu dropdown-menu-right nav-user-dropdown" aria-labelledby="navbarDropdownMenuLink2">
                                 <div class="nav-user-info">
@@ -209,7 +209,7 @@
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="true" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="navbar-collapse collapse show" id="navbarNav" style="">
+                    <div class="navbar-collapse collapse show" id="navbarNav">
                         <ul class="navbar-nav flex-column">
                             <div class="form-group mb-0">
                                 <select class="form-control" name="cbProperty" onchange="refreshProperty(this)">
@@ -223,23 +223,25 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../Dashboard/Dashboard.html" data-toggle="collapse" aria-expanded="true" data-target="#propertypayment" aria-controls="propertypayment">
+                                <a class="nav-link active" href="../Dashboard/Dashboard.html" data-toggle="collapse" aria-expanded="true" data-target="#propertypayment" aria-controls="propertypayment">
                                     <img class="menu_icons" src="../assets/credit_card_icon.svg">Payment<span class="badge badge-success">6</span></a>
                                 </a>
-                                <div id="propertypayment" class="submenu open" style="">
+                                <div id="propertypayment" class="submenu open">
                                     <ul class="nav flex-column">
                                         <li class="nav-item">
                                             <a class="nav-link " href="../Payment/Outstanding Bill.html">
                                                 <img class="menu_icons" src="../assets/bill_icon.svg">
                                                 <div>Outstanding Bill</div>
-                                                <span class="badge badge-success">6</span></a>
+                                                <span class="badge badge-success">6</span>
+                                            </a>
                                             </a>
                                         </li>
                                         <li class="nav-item">
                                             <a class="nav-link active" href="../Payment/Pending Payment.html">
                                                 <img class="menu_icons" src="../assets/credit_score_tick.svg">
                                                 <div>Pending Payment</div>
-                                                <span class="badge badge-success">6</span></a>
+                                                <span class="badge badge-success">6</span>
+                                            </a>
                                             </a>
                                         </li>
                                     </ul>
@@ -266,13 +268,11 @@
         </div>
 
         <div class="dashboard-wrapper">
-            <img class="back-house-image" style="" src="../assets/house_back_img.svg">
+            <img class="back-house-image" src="../assets/house_back_img.svg">
             <main class="py-4">
                 <div class="container-fluid">
-                    <div class="row mb-2">
-                        <div class="col-xl-3">
-                            <div class="uni_heading">Payment Pending</div>
-                        </div>
+                    <div class="row head_wrap">
+                        <div class="uni_heading">Payment Pending</div>
                     </div>
                     <div class="card color-next">
                         <div class="card-body">
