--- a/Receipt/Receipt.html
+++ b/Receipt/Receipt.html
@@ -138,14 +138,14 @@
                 <div class="navbar-brand text-white">Sample House Resident Portal </div>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon">
-                        <img class="userIcon_img" src="../assets/user_icon.svg" style="">
+                        <img class="userIcon_img" src="../assets/user_icon.svg">
                     </span>
                 </button>
                 <div class="collapse navbar-collapse " id="navbarSupportedContent">
                     <ul class="navbar-nav ml-auto navbar-right-top">
                         <li class="nav-item dropdown nav-user">
                             <a class="nav-link nav-user-img" href="../Payment/Outstanding Bill.html" id="navbarDropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span style="color: white;">
-                                    <img class="userIcon_img" src="../assets/user_icon.svg" style=""></span>
+                                    <img class="userIcon_img" src="../assets/user_icon.svg"></span>
                             </a>
                             <div class="dropdown-menu dropdown-menu-right nav-user-dropdown" aria-labelledby="navbarDropdownMenuLink2">
                                 <div class="nav-user-info">
@@ -177,7 +177,7 @@
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="true" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="navbar-collapse collapse show" id="navbarNav" style="">
+                    <div class="navbar-collapse collapse show" id="navbarNav">
                         <ul class="navbar-nav flex-column">
                             <div class="form-group mb-0">
                                 <select class="form-control" name="cbProperty" onchange="refreshProperty(this)">
@@ -194,7 +194,7 @@
                                 <a class="nav-link" href="../Dashboard/Dashboard.html" data-toggle="collapse" aria-expanded="true" data-target="#propertypayment" aria-controls="propertypayment">
                                     <img class="menu_icons" src="../assets/credit_card_icon.svg">Payment<span class="badge badge-success">6</span></a>
                                 </a>
-                                <div id="propertypayment" class="submenu collapse" style="">
+                                <div id="propertypayment" class="submenu collapse">
                                     <ul class="nav flex-column">
                                         <li class="nav-item">
                                             <a class="nav-link " href="../Payment/Outstanding Bill.html">
@@ -233,15 +233,11 @@
         </div>
 
         <div class="dashboard-wrapper">
-            <img class="back-house-image" style="" src="../assets/house_back_img.svg">
+            <img class="back-house-image" src="../assets/house_back_img.svg">
             <main class="py-4">
                 <div class="container-fluid">
-                    <div class="row mb-2">
-                        <div class="col-xl-3">
-                            <!--             <h5>Receipt List</h5> -->
-                            <!-- NEW CODE -->
-                            <div class="uni_heading">Receipt List</div>
-                        </div>
+                    <div class="row head_wrap">
+                        <div class="uni_heading">Receipt List</div>
                     </div>
                     <div class="card color-next">
                         <div class="card-body">
@@ -261,7 +257,8 @@
                                         <td class="text-right">331.58</td>
                                         <td class="text-right">
                                             <a class="btn btn-sm" href="../Receipt/Receipt Detailed.html"><span
-                                                    style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
+                                                    style="color: white;"><img class="row_icons"
+                                                        src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
                                     <tr>
@@ -270,7 +267,8 @@
                                         <td class="text-right">228.85</td>
                                         <td class="text-right">
                                             <a class="btn btn-sm" href="../Receipt/Receipt Detailed.html"><span
-                                                    style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
+                                                    style="color: white;"><img class="row_icons"
+                                                        src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
                                     <tr>
@@ -279,7 +277,8 @@
                                         <td class="text-right">271.33</td>
                                         <td class="text-right">
                                             <a class="btn btn-sm" href="../Receipt/Receipt Detailed.html"><span
-                                                    style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
+                                                    style="color: white;"><img class="row_icons"
+                                                        src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
                                     <tr>
@@ -288,7 +287,8 @@
                                         <td class="text-right">228.85</td>
                                         <td class="text-right">
                                             <a class="btn btn-sm" href="../Receipt/Receipt Detailed.html"><span
-                                                    style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
+                                                    style="color: white;"><img class="row_icons"
+                                                        src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
                                     <tr>
@@ -297,7 +297,8 @@
                                         <td class="text-right">601.25</td>
                                         <td class="text-right">
                                             <a class="btn btn-sm" href="../Receipt/Receipt Detailed.html"><span
-                                                    style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
+                                                    style="color: white;"><img class="row_icons"
+                                                        src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
                                     <tr>
@@ -306,7 +307,8 @@
                                         <td class="text-right">167.17</td>
                                         <td class="text-right">
                                             <a class="btn btn-sm" href="../Receipt/Receipt Detailed.html"><span
-                                                    style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
+                                                    style="color: white;"><img class="row_icons"
+                                                        src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
                                     <tr>
@@ -315,7 +317,8 @@
                                         <td class="text-right">10.00</td>
                                         <td class="text-right">
                                             <a class="btn btn-sm" href="../Receipt/Receipt Detailed.html"><span
-                                                    style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
+                                                    style="color: white;"><img class="row_icons"
+                                                        src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
                                     <tr>
@@ -324,7 +327,8 @@
                                         <td class="text-right">32.94</td>
                                         <td class="text-right">
                                             <a class="btn btn-sm" href="../Receipt/Receipt Detailed.html"><span
-                                                    style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
+                                                    style="color: white;"><img class="row_icons"
+                                                        src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
                                     <tr>
@@ -333,7 +337,8 @@
                                         <td class="text-right">40.15</td>
                                         <td class="text-right">
                                             <a class="btn btn-sm" href="../Receipt/Receipt Detailed.html"><span
-                                                    style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
+                                                    style="color: white;"><img class="row_icons"
+                                                        src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
                                     <tr>
@@ -342,7 +347,8 @@
                                         <td class="text-right">20.00</td>
                                         <td class="text-right">
                                             <a class="btn btn-sm" href="../Receipt/Receipt Detailed.html"><span
-                                                    style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
+                                                    style="color: white;"><img class="row_icons"
+                                                        src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
                                     <tr>
@@ -351,7 +357,8 @@
                                         <td class="text-right">29.45</td>
                                         <td class="text-right">
                                             <a class="btn btn-sm" href="../Receipt/Receipt Detailed.html"><span
-                                                    style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
+                                                    style="color: white;"><img class="row_icons"
+                                                        src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
                                     <tr>
@@ -360,7 +367,8 @@
                                         <td class="text-right">228.85</td>
                                         <td class="text-right">
                                             <a class="btn btn-sm" href="../Receipt/Receipt Detailed.html"><span
-                                                    style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
+                                                    style="color: white;"><img class="row_icons"
+                                                        src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
                                     <tr>
@@ -369,7 +377,8 @@
                                         <td class="text-right">4,576.70</td>
                                         <td class="text-right">
                                             <a class="btn btn-sm" href="../Receipt/Receipt Detailed.html"><span
-                                                    style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
+                                                    style="color: white;"><img class="row_icons"
+                                                        src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
                                     <tr>
@@ -378,7 +387,8 @@
                                         <td class="text-right">231.80</td>
                                         <td class="text-right">
                                             <a class="btn btn-sm" href="../Receipt/Receipt Detailed.html"><span
-                                                    style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
+                                                    style="color: white;"><img class="row_icons"
+                                                        src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
                                     <tr>
@@ -387,7 +397,8 @@
                                         <td class="text-right">100.00</td>
                                         <td class="text-right">
                                             <a class="btn btn-sm" href="../Receipt/Receipt Detailed.html"><span
-                                                    style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
+                                                    style="color: white;"><img class="row_icons"
+                                                        src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
                                     <tr>
@@ -396,7 +407,8 @@
                                         <td class="text-right">72.50</td>
                                         <td class="text-right">
                                             <a class="btn btn-sm" href="../Receipt/Receipt Detailed.html"><span
-                                                    style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
+                                                    style="color: white;"><img class="row_icons"
+                                                        src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
                                     <tr>
@@ -405,7 +417,8 @@
                                         <td class="text-right">288.35</td>
                                         <td class="text-right">
                                             <a class="btn btn-sm" href=".page-button-text "><span
-                                                    style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
+                                                    style="color: white;"><img class="row_icons"
+                                                        src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
                                     <tr>
@@ -414,7 +427,8 @@
                                         <td class="text-right">2,000.00</td>
                                         <td class="text-right">
                                             <a class="btn btn-sm" href=".page-button-text "><span
-                                                    style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
+                                                    style="color: white;"><img class="row_icons"
+                                                        src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
                                     <tr>
@@ -423,7 +437,8 @@
                                         <td class="text-right">228.85</td>
                                         <td class="text-right">
                                             <a class="btn btn-sm" href=".page-button-text "><span
-                                                    style="color: white;"><img class="row_icons" src="../assets/visibility_eye_icon.svg"></span></a>
+                                                    style="color: white;"><img class="row_icons"
+                                                        src="../assets/visibility_eye_icon.svg"></span></a>
                                         </td>
                                     </tr>
                                 </tbody>
